修复审阅申请表回退样式问题

--- a/pcapp/public/index.html
+++ b/pcapp/public/index.html
@@ -21,13 +21,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <style>
-    *{padding: 0;margin: 0;list-style:none;}
-    a{color: #333;text-decoration: none;}
-    body.body{background: #f2f4f5}
-    body.body p,
-    body.body ul{padding: 0;margin: 0;}
-    </style>
+    
+    <!-- 载入全局和三方样式 -->
+    <link rel="stylesheet" href="antd.css">
+    <link rel="stylesheet" href="global.css">
   </head>
   <body class="body">
     <noscript>
