--- a/pcapp/public/index.html
+++ b/pcapp/public/index.html
@@ -23,23 +23,13 @@
     <title>React App</title>
     
     <!-- 载入全局和三方样式 -->
-    <link rel="stylesheet" href="antd.css">
     <link rel="stylesheet" href="global.css">
   </head>
+  
   <body class="body">
     <noscript>
-      You need to enable JavaScript to run this app.
+      抱歉！你需要启用Javascript功能才能运行这个网络应用。
     </noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
